# universal-time-solver

./: ETHICS.md  LICENSE  ONTOLOGY.md  README.md  pyproject.toml  ÄTHERKEKSE.md
examples/: Time_Ontology_Comparison.ipynb
tests/: test_core.py
universal_time_solver/: core.py
universal_time_solver/universal_time_solver/: __main__.py  api.py  explain.py  proof_protocol.py  protocol.py  triggers.py
